fixed schematics images

--- a/Rapport/contents/appendices/HardwareAppendix.tex
+++ b/Rapport/contents/appendices/HardwareAppendix.tex
@@ -3,41 +3,40 @@
 \subsection{H-bridge 1}
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/HB1.PNG}
+	\includegraphics[width=1\textwidth]{figures/HB1.PNG}
 	\caption{\text{H-bridge 1 Schematics}}
-	\label{Hardware diagram}
+	\label{HB1}
 \end{figure}
-
+\newpage
 \subsection{H-bridge 2}
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/HB2.PNG}
+	\includegraphics[width=1\textwidth]{figures/HB2.PNG}
 	\caption{\text{H-bridge 2 Schematics}}
-	\label{Hardware diagram}
+	\label{HB2}
 \end{figure}
-
+\newpage
 \subsection{CPLD}
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/CPLD.PNG}
-	\caption{\text{Schematics of the CPLD}}
+	\includegraphics[width=1\textwidth]{figures/CPLD.PNG}
+	\caption{\text{Schematics of the CPLD and 1.8V power supply}}
 	\label{Hardware diagram}
 \end{figure}
-
+\newpage
 \subsection{Power}
-
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/Power.PNG}
+	\includegraphics[width=1\textwidth]{figures/connectors.PNG}
 	\caption{\text{Power supply}}
 	\label{Hardware diagram}
 \end{figure}
-
+\newpage
 \subsection{Board schematics}
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/BoardSche.PNG}
-	\caption{\text{Full board Schematics}}
-	\label{Hardware diagram}
+	\includegraphics[width=1\textwidth]{figures/BoardSche.PNG}
+	\caption{\text{Full board}}
+	\label{boardpcb}
 \end{figure}
 
