--- a/Rapport/contents/formalities/titleSheet.tex
+++ b/Rapport/contents/formalities/titleSheet.tex
@@ -64,11 +64,10 @@ Ib Helmer Nielsen
 \end{description}
 }
 \begin{description}
-\item { Pages: } 
-\item { Appendices: } 
-\item { Completed:} 
+\item { Total pages: 52} 
+\item { Hereof appendices: 18} 
+\item { Completed: 8th January 2017} 
 \end{description}
-\fixme{fix til sidst}
 \vfill } &
 \parbox{7cm}{
   \vspace{.15cm}
