--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -40,7 +40,7 @@ Price                   & 17.63,- DKK & 211.53,- DKK \\ \hline
 \end{table}
 
 Even if availability wasn't a limitation, the clear choice would be the HC-SR04, due to the more impressive range and the better pricing of the HC-SR04.
-
+\newpage
 \subsection{Ultrasound sensor - HC-SR04}
 When a robot should be able avoid obstacles it will need a device to inform the robot where it's position is compared to the obstacle. This is where an ultrasound sensor plays an important role. For this task the HC-SR04 has been picked.\\
 
@@ -151,11 +151,11 @@ These encoders allow the transmission of data based on motor movement. It works 
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.7\textwidth]{figures/pololuEncoder.jpg}
+	\includegraphics[width=0.5\textwidth]{figures/pololuEncoder.jpg}
 	\caption{\text{Pololu Magnetic Encoder Pair Kit}}
 	\label{Hardware diagram}
 \end{figure}
-
+\newpage
 \section{The Bluetooth tranceiver}
 The robot will utilize the BlueSmiRF Silver bluetooth tranceiver. The transceiver is made by Sparkfun, it is utilized to make use of an GUI, by sending data from the MCU to the computer (GUI) by the use of bluetooth.\\ The bluetooth tranceiver makes it possible to monitor both the inputs and the logic behind the steering. The baudrate is between 2400-115200 bps and the tranceiver can be powered from 3.3v up to 6v. 
 
