--- a/Rapport/lists/glossary.tex
+++ b/Rapport/lists/glossary.tex
@@ -9,3 +9,6 @@
 \nomenclature{RTOS}{Real-Time Operating System} 
 \nomenclature{MOSFET}{Metal-Oxide-Semiconductor-Field-Effect Transistor}
 \nomenclature{TACH}{Tachometer - an instrument measuring the rotation speed of a shaft or disk, as in a motor or other machine}
+\nomenclature{ISE}{Xililx Integrated Synthesis Environment is a software tool for synthesis and analysis of Hardware Description Language}
+\nomenclature{EAGLE}{EAGLE is an electronic design automation application with schematic capture, printed circuit board layout, auto-router and computer-aided manufacturing features}
+\nomenclature{PCB}{Printed Circuit Board}
