--- a/Rapport/contents/test/CPLD.tex
+++ b/Rapport/contents/test/CPLD.tex
@@ -1,5 +1,5 @@
 \subsection{CPLD}
-The purpose of this test is to verify that CPLD performs the correct logic task to control the dual h-bridge solutions.
+The purpose of this test is to verify that CPLD performs the correct logic task to control the dual H-bridge solutions.
 \subsubsection{Equipment}
 \begin{enumerate}
 	\item[•]Agilent MSO-X 3024A Oscilloscope
@@ -9,7 +9,7 @@ The purpose of this test is to verify that CPLD performs the correct logic task 
 \end{enumerate}
 
 \subsubsection{Setup}
-For the test logic probes was used to analyze the logic signals comming from the Uno32 into the CPLD aswell as the outputs from the CPLD going to the h-bridges.
+For the test logic probes was used to analyze the logic signals comming from the Uno32 into the CPLD aswell as the outputs from the CPLD going to the H-bridges.
 
 \subsubsection{Results}
 To compress the results the output will be in the following format:
