--- a/Rapport/contents/test/PWMcontrol.tex
+++ b/Rapport/contents/test/PWMcontrol.tex
@@ -31,7 +31,7 @@ All test was done with a supply voltage at 7.19V
 90\%                & 6.93V                   \\ \hline
 100\%               & 7.07V                   \\ \hline
 \end{tabular}
-\caption{Dc motor control with PWM results}
+\caption{DC motor control with PWM results}
 \label{dcpwmresults}
 \end{table}\\
 The test shows that the motor shield is able to control the DC motor with PWM allowing for the Uno32 to control the amount of power delivered to the motors.
