--- a/Rapport/contents/test/motor.tex
+++ b/Rapport/contents/test/motor.tex
@@ -11,7 +11,7 @@ The setup consist of a single DC motor connected to the Elcanic Power Supply wit
 
 The motor will be tested in the following scenarios:
 \begin{enumerate}
-	\item[•]no load.
+	\item[•]No load.
 	\item[•]Under load.
 	\item[•]Stalled.
 \end{enumerate}
