--- a/Rapport/contents/test/system.tex
+++ b/Rapport/contents/test/system.tex
@@ -4,7 +4,7 @@
 	\item[•]Elcanic Power Supply
 \end{enumerate}
 \subsubsection{Setup}
-A small course was made for the robot to run, consisting of a 400x200cm area with the start at 0x0 and end at 400x200. A few objects were placed on the course for the robot to avoid. The robot was powered through the power supply for easy shut off of power if necessary.\\
+A small course was made for the robot to run, consisting of a 400x200cm area with the start at 0x0 and end at 400x200. A few objects were placed on the course for the robot to avoid. The robot was powered through the power supply for easy shut off from power if necessary.\\
 This test was done a few times to get a consistent result.
 \subsubsection{Results}
 The initial turn of the robot towards the end point worked fine, although the motors on the robot being quite aggressive, making the robot jump a bit when breaking, resulting in slight misalignments.\\
