--- a/Rapport/contents/test/ultrasound.tex
+++ b/Rapport/contents/test/ultrasound.tex
@@ -1,5 +1,5 @@
 \subsection{Ultrasound HC-SR04}
-The purpose of this test is to measure is the HRC-S04 Ultrasonic distance sensor is reliable at reading the distance to an object.
+The purpose of this test is to measure if the HC-SR04 Ultrasonic distance sensor is reliable at reading the distance to an object.
 
 \subsubsection{Equipment}
 
